fixed StartGameMessage